--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1253,7 +1253,11 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_FILE_TYPE(class='form-select bg-secondary') }}
             <div id="IMAGE_FILE_TYPE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">File type for timelapse images.  Restart gunicorn if you change this setting.<br><span class="badge rounded-pill bg-warning text-dark">Warning</span><b>Some browsers do *NOT* support TIFF files.</b></div>
+        <div class="col-sm-8">
+            <div>File type for timelapse images.  Restart gunicorn if you change this setting.</div>
+            <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> PNGs will use 10x space compared to JPEGs.</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Some browsers do *NOT* support TIFF files.</div>
+        </div>
     </div>
 
     <div class="form-group row">
