do not show chart ticks

--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -94,6 +94,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -101,6 +102,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: true,
                     },
@@ -137,6 +139,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -144,6 +147,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -183,6 +187,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -190,6 +195,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: true,
                     },
@@ -226,6 +232,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -233,6 +240,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: true,
                     },
@@ -269,6 +277,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -276,6 +285,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: true,
                     },
@@ -312,6 +322,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -319,6 +330,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -357,6 +369,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -364,6 +377,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -400,6 +414,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -407,6 +422,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -443,6 +459,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -450,6 +467,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -486,6 +504,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -493,6 +512,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -529,6 +549,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -536,6 +557,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -572,6 +594,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -579,6 +602,7 @@ function init() {
                     beginAtZero:false,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
@@ -644,6 +668,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                 },
@@ -651,6 +676,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
