--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -387,6 +387,7 @@ function init() {
                 x: {
                     grid: {
                         display: true,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                     },
                     ticks: {
@@ -413,6 +414,7 @@ function init() {
                     beginAtZero:true,
                     grid: {
                         display: false,
+                        drawTicks: false,
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: true,
                     },
