--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6117,7 +6117,7 @@ var camera_id = {{ camera_id }};
 
     <hr>
 
-    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Sensor units may be in either Celcius or Fahrenheit based on the Temperature Display option on the Camera Tab</div>
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Sensor units may be in either Celsius or Fahrenheit based on the Temperature Display option on the Camera Tab</div>
 
     <hr>
 
