--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6300,6 +6300,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-6">
             <div>Last measurement: <b>{{ dh_dewpoint_str }}</b></div>
             <div>Last delta: <b>{{ dh_temp_delta_str }}</b></div>
+            <div>Expected status: <b>{{ dh_status_str }}</b></div>
         </div>
     </div>
 
@@ -6503,6 +6504,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">
             <div>Target temperature</div>
             <div>Last delta: <b>{{ fan_temp_delta_str }}</b></div>
+            <div>Expected status: <b>{{ fan_status_str }}</b></div>
         </div>
     </div>
 
