--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3820,6 +3820,42 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_7.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.CHARTS__CUSTOM_SLOT_7(class='form-select bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_7-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_8.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.CHARTS__CUSTOM_SLOT_8(class='form-select bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_8-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_9.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.CHARTS__CUSTOM_SLOT_9(class='form-select bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_9-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7017,6 +7053,9 @@ const field_names = [
     'CHARTS__CUSTOM_SLOT_4',
     'CHARTS__CUSTOM_SLOT_5',
     'CHARTS__CUSTOM_SLOT_6',
+    'CHARTS__CUSTOM_SLOT_7',
+    'CHARTS__CUSTOM_SLOT_8',
+    'CHARTS__CUSTOM_SLOT_9',
     'CLAHE_CLIPLIMIT',
     'CLAHE_GRIDSIZE',
     'IMAGE_STRETCH__CLASSNAME',
