use alert instead of manual message

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -7010,10 +7010,10 @@ var camera_id = {{ camera_id }};
     </div>
 
     <div class="form-group row" style="height:100px;">
-        <div class="col-sm-8">
+        <div class="col-sm-2">
             <div class="loader" id="loader_config"></div>
-            <div id="success-message" class="text-success" style="display: none;"></div>
-            <div id="failure-message" class="invalid-feedback text-danger" style="display: none;"></div>
+            <div id="success-message" class="alert alert-success" role="alert" style="display: none;"></div>
+            <div id="failure-message" class="alert alert-danger" role="alert" style="display: none;"></div>
             <div id="failure-fields" class="invalid-feedback text-warning" style="display: none;"></div>
         </div>
     </div>
