--- a/indi_allsky/flask/templates/support_info.html
+++ b/indi_allsky/flask/templates/support_info.html
@@ -8,21 +8,6 @@
 pre {
     white-space: pre-wrap;
 }
-
-.loader {
-  display: block;
-  border: 3px solid #f3f3f3;
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
@@ -42,7 +27,9 @@ var camera_id = {{ camera_id }};
         </a>
     </div>
     <div class="col-sm-1">
-        <div class="col-sm-1 loader" id="loader_support"></div>
+    <div id="loader_support" class="spinner-border text-info" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
     </div>
 </div>
 
